--- a/mdel.1
+++ b/mdel.1
@@ -1,6 +1,7 @@
-.TH mdel 1 "13aug97" mtools-3.8
+.TH mdel 1 "27May01" mtools-pre6-3.9.8
 .SH Name
 mdel - delete an MSDOS file
+mdeltree - recursively delete an MSDOS directory and its contents
 '\" t
 .de TQ
 .br
@@ -12,15 +13,40 @@ mdel - delete an MSDOS file
 .tr \(if`
 .tr \(pd"
 
-.SH Note
+.SH Note\ of\ warning
 This manpage has been automatically generated from mtools's texinfo
-documentation.  However, this process is only approximative, and some
+documentation, and may not be entirely accurate or complete.  See the
+end of this man page for details.
+.PP
+.SH Description
+.iX "p mdel"
+.iX "c removing MS-DOS files"
+.iX "c erasing MS-DOS files"
+.iX "c deleting MS-DOS files"
+.PP
+The \fR\&\f(CWmdel\fR command is used to delete an MS-DOS file. Its syntax
+is:
+.PP
+.(l I
+\&\fR\&\f(CWmdel\fR [\fR\&\f(CW-v\fR] \fImsdosfile\fR [ \fImsdosfiles\fR \&...  ]
+.)l
+ 
+.PP
+\&\fR\&\f(CWMdel\fR deletes files on an MS-DOS filesystem.
+.PP
+\&\fR\&\f(CWMdel\fR asks for verification prior to removing a read-only file.
+.PP
+.SH See\ Also
+Mtools' texinfo doc
+.SH Viewing\ the\ texi\ doc
+This manpage has been automatically generated from mtools's texinfo
+documentation. However, this process is only approximative, and some
 items, such as crossreferences, footnotes and indices are lost in this
-translation process.  Indeed, this items have no appropriate
-representation in the manpage format.  Moreover, only the items specific
-to each command have been translated, and the general information about
-mtools has been dropped in the manpage version.  Thus I strongly advise
-you to use the original texinfo doc.
+translation process.  Indeed, these items have no appropriate
+representation in the manpage format.  Moreover, not all information has
+been translated into the manpage version.  Thus I strongly advise you to
+use the original texinfo doc.  See the end of this manpage for
+instructions how to view the texinfo doc.
 .TP
 * \ \ 
 To generate a printable copy from the texinfo doc, run the following
@@ -50,6 +76,8 @@ To generate a html copy,  run:
 .lp
  
 \&\fRA premade html can be found at:
+\&\fR\&\f(CW\(ifhttp://mtools.linux.lu\(is\fR
+and also at:
 \&\fR\&\f(CW\(ifhttp://www.tux.org/pub/knaff/mtools\(is\fR
 .TP
 * \ \ 
@@ -70,22 +98,3 @@ The texinfo doc looks most pretty when printed or as html.  Indeed, in
 the info version certain examples are difficult to read due to the
 quoting conventions used in info.
 .PP
-.SH Description
-.iX "p mdel"
-.iX "c removing MS-DOS files"
-.iX "c erasing MS-DOS files"
-.iX "c deleting MS-DOS files"
-.PP
-The \fR\&\f(CWmdel\fR command is used to delete an MS-DOS file. Its syntax
-is:
-.PP
-.(l I
-\&\fR\&\f(CWmdel\fR [\fR\&\f(CW-v\fR] \fImsdosfile\fR [ \fImsdosfiles\fR \&...  ]
-.)l
- 
-.PP
-\&\fR\&\f(CWMdel\fR deletes files on an MS-DOS filesystem.
-.PP
-\&\fR\&\f(CWMdel\fR asks for verification prior to removing a read-only file.
-.SH See Also
-Mtools' texinfo doc
