--- a/mpartition.1
+++ b/mpartition.1
@@ -1,4 +1,4 @@
-.TH mpartition 1 "13aug97" mtools-3.8
+.TH mpartition 1 "27May01" mtools-pre6-3.9.8
 .SH Name
 mpartition - partition an MSDOS hard disk
 '\" t
@@ -12,63 +12,10 @@ mpartition - partition an MSDOS hard disk
 .tr \(if`
 .tr \(pd"
 
-.SH Note
+.SH Note\ of\ warning
 This manpage has been automatically generated from mtools's texinfo
-documentation.  However, this process is only approximative, and some
-items, such as crossreferences, footnotes and indices are lost in this
-translation process.  Indeed, this items have no appropriate
-representation in the manpage format.  Moreover, only the items specific
-to each command have been translated, and the general information about
-mtools has been dropped in the manpage version.  Thus I strongly advise
-you to use the original texinfo doc.
-.TP
-* \ \ 
-To generate a printable copy from the texinfo doc, run the following
-commands:
- 
-.nf
-.ft 3
-.in +0.3i
-    ./configure; make dvi; dvips mtools.dvi
-.fi
-.in -0.3i
-.ft R
-.lp
- 
-\&\fR
-.TP
-* \ \ 
-To generate a html copy,  run:
- 
-.nf
-.ft 3
-.in +0.3i
-    ./configure; make html
-.fi
-.in -0.3i
-.ft R
-.lp
- 
-\&\fRA premade html can be found at:
-\&\fR\&\f(CW\(ifhttp://www.tux.org/pub/knaff/mtools\(is\fR
-.TP
-* \ \ 
-To generate an info copy (browsable using emacs' info mode), run:
- 
-.nf
-.ft 3
-.in +0.3i
-    ./configure; make info
-.fi
-.in -0.3i
-.ft R
-.lp
- 
-\&\fR
-.PP
-The texinfo doc looks most pretty when printed or as html.  Indeed, in
-the info version certain examples are difficult to read due to the
-quoting conventions used in info.
+documentation, and may not be entirely accurate or complete.  See the
+end of this man page for details.
 .PP
 .SH Description
 .iX "p mpartition"
@@ -85,7 +32,7 @@ is set.
 .(l I
 \&\fR\&\f(CWmpartition\fR \fR\&\f(CW-p\fR \fIdrive\fR
 \&\fR\&\f(CWmpartition\fR \fR\&\f(CW-r\fR \fIdrive\fR
-\&\fR\&\f(CWmpartition\fR \fR\&\f(CW-I\fR \fIdrive\fR
+\&\fR\&\f(CWmpartition\fR \fR\&\f(CW-I\fR [\fR\&\f(CW-B\fR \fIbootSector\fR] \fIdrive\fR 
 \&\fR\&\f(CWmpartition\fR \fR\&\f(CW-a\fR \fIdrive\fR
 \&\fR\&\f(CWmpartition\fR \fR\&\f(CW-d\fR \fIdrive\fR
 \&\fR\&\f(CWmpartition\fR \fR\&\f(CW-c\fR [\fR\&\f(CW-s\fR \fIsectors\fR] [\fR\&\f(CW-h\fR \fIheads\fR]
@@ -160,7 +107,7 @@ proper alignment of the partitions.  If any of these checks fails, the
 partition table is not changes.  The \fR\&\f(CW-f\fR allows you to override
 these safeguards.
 .PP
-The following option is available for all operations:
+The following options are available for all operations:
 .TP
 \&\fR\&\f(CWv\fR\ 
 Together with \fR\&\f(CW-p\fR prints the partition table as it is now (no
@@ -170,5 +117,71 @@ change operation), or as it is after it is modified.
 If the verbosity flag is given twice, mpartition will print out a
 hexdump of the partition table when reading it from and writing it to
 the device.
-.SH See Also
+.PP
+The following option is available for partition table initialization:
+.TP
+\&\fR\&\f(CWB\ \fIbootSector\fR\&\f(CW\fR\ 
+Reads the template master boot record from file \fIbootSector\fR.
+.PP
+.SH See\ Also
 Mtools' texinfo doc
+.SH Viewing\ the\ texi\ doc
+This manpage has been automatically generated from mtools's texinfo
+documentation. However, this process is only approximative, and some
+items, such as crossreferences, footnotes and indices are lost in this
+translation process.  Indeed, these items have no appropriate
+representation in the manpage format.  Moreover, not all information has
+been translated into the manpage version.  Thus I strongly advise you to
+use the original texinfo doc.  See the end of this manpage for
+instructions how to view the texinfo doc.
+.TP
+* \ \ 
+To generate a printable copy from the texinfo doc, run the following
+commands:
+ 
+.nf
+.ft 3
+.in +0.3i
+    ./configure; make dvi; dvips mtools.dvi
+.fi
+.in -0.3i
+.ft R
+.lp
+ 
+\&\fR
+.TP
+* \ \ 
+To generate a html copy,  run:
+ 
+.nf
+.ft 3
+.in +0.3i
+    ./configure; make html
+.fi
+.in -0.3i
+.ft R
+.lp
+ 
+\&\fRA premade html can be found at:
+\&\fR\&\f(CW\(ifhttp://mtools.linux.lu\(is\fR
+and also at:
+\&\fR\&\f(CW\(ifhttp://www.tux.org/pub/knaff/mtools\(is\fR
+.TP
+* \ \ 
+To generate an info copy (browsable using emacs' info mode), run:
+ 
+.nf
+.ft 3
+.in +0.3i
+    ./configure; make info
+.fi
+.in -0.3i
+.ft R
+.lp
+ 
+\&\fR
+.PP
+The texinfo doc looks most pretty when printed or as html.  Indeed, in
+the info version certain examples are difficult to read due to the
+quoting conventions used in info.
+.PP
