--- a/mtoolstest.1
+++ b/mtoolstest.1
@@ -1,4 +1,4 @@
-.TH mtoolstest 1 "13aug97" mtools-3.8
+.TH mtoolstest 1 "27May01" mtools-pre6-3.9.8
 .SH Name
 mtoolstest - tests and displays the configuration
 '\" t
@@ -12,15 +12,36 @@ mtoolstest - tests and displays the configuration
 .tr \(if`
 .tr \(pd"
 
-.SH Note
+.SH Note\ of\ warning
 This manpage has been automatically generated from mtools's texinfo
-documentation.  However, this process is only approximative, and some
+documentation, and may not be entirely accurate or complete.  See the
+end of this man page for details.
+.PP
+.SH Description
+.iX "p mtoolstest"
+.iX "c Testing configuration file for correctness"
+.iX "c Checking configuration file"
+.iX "c Verifying configuration file"
+.PP
+The \fR\&\f(CWmtoolstest\fR command is used to tests the mtools configuration
+files. To invoke it, just type \fR\&\f(CWmtoolstest\fR without any arguments.
+\&\fR\&\f(CWMtoolstest\fR reads the mtools configuration files, and prints the
+cumulative configuration to \fR\&\f(CWstdout\fR. The output can be used as a
+configuration file itself (although you might want to remove redundant
+clauses).  You may use this program to convert old-style configuration
+files into new style configuration files.
+.PP
+.SH See\ Also
+Mtools' texinfo doc
+.SH Viewing\ the\ texi\ doc
+This manpage has been automatically generated from mtools's texinfo
+documentation. However, this process is only approximative, and some
 items, such as crossreferences, footnotes and indices are lost in this
-translation process.  Indeed, this items have no appropriate
-representation in the manpage format.  Moreover, only the items specific
-to each command have been translated, and the general information about
-mtools has been dropped in the manpage version.  Thus I strongly advise
-you to use the original texinfo doc.
+translation process.  Indeed, these items have no appropriate
+representation in the manpage format.  Moreover, not all information has
+been translated into the manpage version.  Thus I strongly advise you to
+use the original texinfo doc.  See the end of this manpage for
+instructions how to view the texinfo doc.
 .TP
 * \ \ 
 To generate a printable copy from the texinfo doc, run the following
@@ -50,6 +71,8 @@ To generate a html copy,  run:
 .lp
  
 \&\fRA premade html can be found at:
+\&\fR\&\f(CW\(ifhttp://mtools.linux.lu\(is\fR
+and also at:
 \&\fR\&\f(CW\(ifhttp://www.tux.org/pub/knaff/mtools\(is\fR
 .TP
 * \ \ 
@@ -70,18 +93,3 @@ The texinfo doc looks most pretty when printed or as html.  Indeed, in
 the info version certain examples are difficult to read due to the
 quoting conventions used in info.
 .PP
-.SH Description
-.iX "p mtoolstest"
-.iX "c Testing configuration file for correctness"
-.iX "c Checking configuration file"
-.iX "c Verifying configuration file"
-.PP
-The \fR\&\f(CWmtoolstest\fR command is used to tests the mtools configuration
-files. To invoke it, just type \fR\&\f(CWmtoolstest\fR without any arguments.
-\&\fR\&\f(CWMtoolstest\fR reads the mtools configuration files, and prints the
-cumulative configuration to \fR\&\f(CWstdout\fR. The output can be used as a
-configuration file itself (although you might want to remove redundant
-clauses).  You may use this program to convert old-style configuration
-files into new style configuration files.
-.SH See Also
-Mtools' texinfo doc
